# beaverlog-tools

./: .gitignore  README.md  download.py  export-to-json.py  import-json.py  import-summarized-activities.py  import-tsv.py  pyproject.toml  requirements.txt  sync-example.sh  upload-tsv.py  upload.py
all/common/: auth.py  utils.py
common/: auth.py  utils.py
shared/: pyproject.toml
shared/common/: auth.py
v0/: clear.py  dearchive-link.py  dearchive-project.py  download.py  upload-summarized-activities.py  upload-tsv.py  upload.py
v0/common/: auth.py  clear.py  data.py  parser.py
v1/: clear.py  download.py  upgrade.py  upload.py
v1/common/: auth.py  clear.py  data.py  ids.py  parser.py  remote.py
v1/detail/upgrade/: v0.py
